Zadania domowe i sprawdziany od teraz wyświetlane są razem. Wyświetlanie zadań i sprawdzianów od teraz wyświetla miesiące poziomo. Zmieniono nazewnictwo plików związanych z Egzaminami, które od teraz obejmują również zadania domowe.

--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -50,7 +50,7 @@
                     </NavigationViewItem.MenuItems>
                 </NavigationViewItem>
                 <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
-                <NavigationViewItem Icon="Save" Content="Sprawdziany" Tag="ExamsPage" />
+                <NavigationViewItem Icon="Save" Content="Sprawdziany i zadania domowe" Tag="DeadlineablePage" />
                 <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
                 <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
