Dodano NotesPage i poprawiono mapowanie uwag i pochwał

--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -51,6 +51,7 @@
                 </NavigationViewItem>
                 <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
                 <NavigationViewItem Icon="Save" Content="Sprawdziany i zadania domowe" Tag="DeadlineablePage" />
+                <NavigationViewItem Icon="Folder" Content="Uwagi i pochwały" Tag="NotesPage" />
                 <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
                 <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
