--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -28,41 +28,47 @@
             <Image Source="/Assets/StoreLogo.png" Height="16" Width="16" Grid.Column="1" VerticalAlignment="Center"/>
             <TextBlock Style="{StaticResource AppTitle}" Grid.Column="2">Vulcan dla Windows</TextBlock>
         </Grid>
-        <NavigationView x:Name="nvSample" Grid.Row="2" PaneDisplayMode="Top" SelectionChanged="NavigationChangedPage" BackRequested="BackRequested">
-            <NavigationView.MenuItems>
-                <NavigationViewItem Icon="Home" Tag="MainPanelPage" />
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <NavigationView x:Name="nvSample"  PaneDisplayMode="Top" SelectionChanged="NavigationChangedPage" BackRequested="BackRequested">
+                <NavigationView.MenuItems>
+                    <NavigationViewItem Icon="Home" Tag="MainPanelPage" />
 
-                <NavigationViewItem Content="Oceny" Tag="GradesPage" >
-                    <NavigationViewItem.Icon>
-                        <ImageIcon Source="/Assets/GradesIcon.png"/>
-                    </NavigationViewItem.Icon>
-                    <NavigationViewItem.MenuItems>
-                        <NavigationViewItem Content="Szczegóły" ToolTipService.ToolTip="Wyświetl szczegółowe oceny" Tag="GradesPage"/>
-                        <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl oceny półroczne i końcowe" Tag="GradesSummaryPage"/>
-                    </NavigationViewItem.MenuItems>
+                    <NavigationViewItem Content="Oceny" Tag="GradesPage" >
+                        <NavigationViewItem.Icon>
+                            <ImageIcon Source="/Assets/GradesIcon.png"/>
+                        </NavigationViewItem.Icon>
+                        <NavigationViewItem.MenuItems>
+                            <NavigationViewItem Content="Szczegóły" ToolTipService.ToolTip="Wyświetl szczegółowe oceny" Tag="GradesPage"/>
+                            <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl oceny półroczne i końcowe" Tag="GradesSummaryPage"/>
+                        </NavigationViewItem.MenuItems>
 
-                </NavigationViewItem>
-                <NavigationViewItem Icon="Save" Content="Plan Lekcji" Tag="TimetablePage" />
-                <NavigationViewItem Icon="Save" Content="Obecność" Tag="AttendancePage">
-                    <NavigationViewItem.MenuItems>
-                        <NavigationViewItem Content="Ostatnie" ToolTipService.ToolTip="Wyświetl ostatnie obecności" Tag="AttendancePage"/>
-                        <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl podsumowanie frekwencji" Tag="AttendanceReportPage"/>
-                    </NavigationViewItem.MenuItems>
-                </NavigationViewItem>
-                <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
-                <NavigationViewItem Icon="Save" Content="Sprawdziany i zadania domowe" Tag="DeadlineablePage" />
-                <NavigationViewItem Icon="Folder" Content="Uwagi i pochwały" Tag="NotesPage" />
-                <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
-                <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
+                    </NavigationViewItem>
+                    <NavigationViewItem Icon="Save" Content="Plan Lekcji" Tag="TimetablePage" />
+                    <NavigationViewItem Icon="Save" Content="Obecność" Tag="AttendancePage">
+                        <NavigationViewItem.MenuItems>
+                            <NavigationViewItem Content="Ostatnie" ToolTipService.ToolTip="Wyświetl ostatnie obecności" Tag="AttendancePage"/>
+                            <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl podsumowanie frekwencji" Tag="AttendanceReportPage"/>
+                        </NavigationViewItem.MenuItems>
+                    </NavigationViewItem>
+                    <NavigationViewItem Icon="Mail" Content="Wiadomości" Tag="MessagesPage" />
+                    <NavigationViewItem Icon="Save" Content="Sprawdziany i zadania domowe" Tag="DeadlineablePage" />
+                    <NavigationViewItem Icon="Folder" Content="Uwagi i pochwały" Tag="NotesPage" />
+                    <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
+                    <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
-            </NavigationView.MenuItems>
-            <!--<NavigationView.FooterMenuItems>
+                </NavigationView.MenuItems>
+                <!--<NavigationView.FooterMenuItems>
                 <NavigationViewItem Content="Account" Tag="SamplePage4" Icon="Contact" />
                 <NavigationViewItem Content="Your Cart" Tag="SamplePage5" Icon="Shop" />
                 <NavigationViewItem Content="Help" Tag="SamplePage5" Icon="Help" />
             </NavigationView.FooterMenuItems>-->
+            </NavigationView>
+            <Frame x:Name="rootFrame" Grid.Row="1"/>
 
-            <Frame x:Name="rootFrame" />
-        </NavigationView>
+        </Grid>
     </Grid>
 </Window>
