--- a/VulcanForWindows/UserControls/TimetableDayDisplayer.xaml
+++ b/VulcanForWindows/UserControls/TimetableDayDisplayer.xaml
@@ -34,6 +34,7 @@
                 <Style TargetType="ListViewItem">
                     <Setter Property="Padding" Value="0"/>
                     <Setter Property="Margin" Value="0"/>
+                    <Setter Property="CornerRadius" Value="4"/>
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 </Style>
             </ListView.ItemContainerStyle>
