--- a/VulcanForWindows/GradesPage.xaml
+++ b/VulcanForWindows/GradesPage.xaml
@@ -9,10 +9,14 @@
     xmlns:classes="using:VulcanForWindows.Classes" 
     xmlns:grade="using:Vulcanova.Features.Grades" 
     xmlns:main="using:VulcanForWindows" 
+    xmlns:converters="using:Converters"
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
    >
 
     <Page.Resources>
+        <converters:VisibilityConverter x:Key="VisibilityConverter"/>
+        <converters:BoolToColor x:Key="BoolToColor"/>
+        <converters:BoolToStrings x:Key="BoolToStrings"/>
         <DataTemplate x:Key="GradeInfoFlyout" x:DataType="grade:Grade">
             <!-- Define the content of your Flyout here -->
             <StackPanel Width="200">
@@ -190,12 +194,18 @@
                                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                                     </Style>
                                 </ListView.ItemContainerStyle>
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Spacing="10" Height="42">
-
-                                    <Border Background="{x:Bind BgColor}" VerticalAlignment="Stretch" HorizontalAlignment="Left" Height="35" CornerRadius="3">
+                                <Grid HorizontalAlignment="Stretch" Height="42" ColumnSpacing="10" Padding="0,0,10,0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Background="{x:Bind BgColor}" VerticalAlignment="Stretch" 
+                                            HorizontalAlignment="Left" Height="35" CornerRadius="3"
+                                            Grid.Column="0">
                                         <TextBlock TextAlignment="Center" Width="35" FontWeight="Medium" FontSize="14" VerticalAlignment="Center" Text="{x:Bind ContentRaw}"/>
                                     </Border>
-                                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="1">
 
                                         <Grid.ColumnDefinitions>
                                             <!-- Define three columns with different widths -->
@@ -219,7 +229,12 @@
                                         </TextBlock>
 
                                     </Grid>
-                                </StackPanel>
+                                    <Border Grid.Column="2" Background="{x:Bind IsHipothetic, Converter={StaticResource BoolToColor},
+                                        ConverterParameter=Orange!Red}" HorizontalAlignment="Right" CornerRadius="4" Padding="3" VerticalAlignment="Center"
+                                            Visibility="{x:Bind IsHipotheticOrRecent, Converter={StaticResource VisibilityConverter}}">
+                                        <TextBlock Text="{x:Bind IsHipothetic, Converter={StaticResource BoolToStrings}, ConverterParameter=Hipotetyczna!Nowa}" FontWeight="Black" FontSize="12"/>
+                                    </Border>
+                                </Grid>
 
                             </ListView>
 
