--- a/VulcanForWindows/BlankPage1.xaml
+++ b/VulcanForWindows/BlankPage1.xaml
@@ -13,10 +13,12 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <Button Content="Clear" HorizontalAlignment="Stretch" Click="Button_Click" x:Name="b1"/>
-        <Button Content="Open files" HorizontalAlignment="Stretch" Grid.Column="1"/>
-        <Button Content="Button 3" HorizontalAlignment="Stretch" Grid.Column="2"/>
+        <Button Content="Remove ClassmateGradesSyncFiles" HorizontalAlignment="Stretch" Click="b2_Click" x:Name="b2" Grid.Column="1"/>
+        <Button Content="Open files" HorizontalAlignment="Stretch" Grid.Column="2"/>
+        <Button Content="Button 3" HorizontalAlignment="Stretch" Grid.Column="3"/>
     </Grid>
 </Page>
