--- a/VulcanForWindows/BlankPage1.xaml
+++ b/VulcanForWindows/BlankPage1.xaml
@@ -8,17 +8,12 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <ListView>
 
         <Button Content="Clear" HorizontalAlignment="Stretch" Click="Button_Click" x:Name="b1"/>
-        <Button Content="Remove ClassmateGradesSyncFiles" HorizontalAlignment="Stretch" Click="b2_Click" x:Name="b2" Grid.Column="1"/>
-        <Button Content="Open files" HorizontalAlignment="Stretch" Grid.Column="2"/>
-        <Button Content="Button 3" HorizontalAlignment="Stretch" Grid.Column="3"/>
-    </Grid>
+        <Button Content="Remove ClassmateGradesSyncFiles" HorizontalAlignment="Stretch" Click="b2_Click" x:Name="b2" />
+        <Button Content="Get example column from Classmates" HorizontalAlignment="Stretch" Click="GetColumn" x:Name="b3" />
+        <Button Content="Open files" HorizontalAlignment="Stretch" />
+        <Button Content="Button 3" HorizontalAlignment="Stretch" />
+    </ListView>
 </Page>
