--- a/VulcanForWindows/App.xaml
+++ b/VulcanForWindows/App.xaml
@@ -6,11 +6,16 @@
     <Application.Resources>
 
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!-- Other merged dictionaries here -->
+                
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
+
+            <x:Double x:Key="ContentDialogMinWidth">300</x:Double>
+            <x:Double x:Key="ContentDialogMaxWidth">1200</x:Double>
 
             <Style
                 x:Name="AppTitle"
